--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1 id="h1">Hello world!!</h1>
-    <h2>Hey, this is Alwin</h2>
+    <h2>Hey, this is kartik</h2>
     <script src="/script.js"></script>
   </body>
 </html>
